Improved search controller